data/examples/controlled-exp/output-manifests/catalogue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
spec:
  template:
    spec:
      containers:
      - name: catalogue
        image: robotshop/rs-catalogue:latest
        imagePullPolicy: IfNotPresent
      - name: dynatrace
        image: dynatrace/oneagent
  selector:
    service: null
  replicas: 1
