data/examples/controlled-exp/output-manifests/mongo-orders-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-orders
  template:
    metadata:
      labels:
        app: mongo-orders
    spec:
      containers:
        - name: mamarino/mongo-orders
          image: mongo
