data/examples/controlled-exp/output-manifests/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    service: orders
spec:
  template:
    spec:
      containers:
      - name: orders
        image: mamarino/rs-orders:latest
    metadata:
      labels:
        service: orders
  selector:
    matchLabels:
      service: orders
  replicas: 1
