data/examples/controlled-exp/output-manifests/payments-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  labels:
    service: payments
spec:
  template:
    spec:
      containers:
      - name: payments
        image: robotshop/rs-payments:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
        imagePullPolicy: IfNotPresent
    metadata:
      labels:
        service: payments
  hostNetwork: false
  selector:
    matchLabels:
      service: payments
      stage: prod
  replicas: 1
