data/examples/controlled-exp/output-manifests/categories-srv-Service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    service: categories
  name: categories-srv
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    service: categories
