data/examples/controlled-exp/output-manifests/catalogue-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue
spec:
  hosts:
  - catalogue
  http:
  - route:
    - destinations:
        host: catalogue
    timeout: 0.4s
